/* Component tests generated by react-snapshot-test-generator on 2016-11-14T12:36:17.519Z */

import React from 'react';
import renderer from 'react-test-renderer';

function snapshotTest(element) {
  const tree = renderer.create(element).toJSON();
  expect(tree).toMatchSnapshot();
}



import Container from '../src/common/Container/Container';
import TabsContainer from '../src/common/Container/TabsContainer';
import LoadingContainer from '../src/common/Container/LoadingContainer';
import BashSnippet from '../src/common/BashSnippet/BashSnippet';
import ChartLegend from '../src/common/Billing/ChartLegend';
import Header from '../src/common/ColumnList/Header';
import ItemColumn from '../src/common/ColumnList/ItemColumn';
import ColumnHeader from '../src/common/ColumnList/Column/ColumnHeader';
import Desc from '../src/common/ColumnList/Column/Desc';
import ID from '../src/common/ColumnList/Column/ID';
import Name from '../src/common/ColumnList/Column/Name';
import Text from '../src/common/ColumnList/Column/Text';
import DialogContent from '../src/common/Dialog/DialogContent';
import DialogContentSection from '../src/common/Dialog/DialogContentSection';
import DialogSidebar from '../src/common/Dialog/DialogSidebar';
import DialogSidebarBox from '../src/common/Dialog/DialogSidebarBox';
import DialogSidebarSection from '../src/common/Dialog/DialogSidebarSection';
import RoundIcon from '../src/common/Icon/RoundIcon';
import ListContainer from '../src/common/Lists/ListContainer';
import MobileOnboardingSlide from '../src/common/MobileOnboarding/MobileOnboardingSlide';
import NotificationCloseButton from '../src/common/Notification/NotificationCloseButton';
import Show from '../src/common/Show/Show';
import ListSubheader from '../src/common/Sidebar/ListSubheader';
import SliderSection from '../src/common/Slider/SliderSection';
import TraceResult from '../src/common/TraceResult/TraceResult';
import Truncate from '../src/common/Truncate/Truncate';


describe('<Container />', () => {
  it('renders correctly', () => {
    snapshotTest(<Container />);
  });
});

describe('<TabsContainer />', () => {
  it('renders correctly', () => {
    snapshotTest(<TabsContainer />);
  });
});

describe('<LoadingContainer />', () => {
  it('renders correctly', () => {
    snapshotTest(<LoadingContainer />);
  });
});

describe('<BashSnippet />', () => {
  it('renders correctly', () => {
    snapshotTest(<BashSnippet />);
  });
});

describe('<ChartLegend />', () => {
  it('renders correctly', () => {
    snapshotTest(<ChartLegend />);
  });
});

describe('<Header />', () => {
  it('renders correctly', () => {
    snapshotTest(<Header />);
  });
});

describe('<ItemColumn />', () => {
  it('renders correctly', () => {
    snapshotTest(<ItemColumn />);
  });
});

describe('<ColumnHeader />', () => {
  it('renders correctly', () => {
    snapshotTest(<ColumnHeader />);
  });
});

describe('<Desc />', () => {
  it('renders correctly', () => {
    snapshotTest(<Desc />);
  });
});

describe('<ID />', () => {
  it('renders correctly', () => {
    snapshotTest(<ID />);
  });
});

describe('<Name />', () => {
  it('renders correctly', () => {
    snapshotTest(<Name />);
  });
});

describe('<Text />', () => {
  it('renders correctly', () => {
    snapshotTest(<Text />);
  });
});

describe('<DialogContent />', () => {
  it('renders correctly', () => {
    snapshotTest(<DialogContent />);
  });
});

describe('<DialogContentSection />', () => {
  it('renders correctly', () => {
    snapshotTest(<DialogContentSection />);
  });
});

describe('<DialogSidebar />', () => {
  it('renders correctly', () => {
    snapshotTest(<DialogSidebar />);
  });
});

describe('<DialogSidebarBox />', () => {
  it('renders correctly', () => {
    snapshotTest(<DialogSidebarBox />);
  });
});

describe('<DialogSidebarSection />', () => {
  it('renders correctly', () => {
    snapshotTest(<DialogSidebarSection />);
  });
});

describe('<RoundIcon />', () => {
  it('renders correctly', () => {
    snapshotTest(<RoundIcon />);
  });
});

describe('<ListContainer />', () => {
  it('renders correctly', () => {
    snapshotTest(<ListContainer />);
  });
});

describe('<MobileOnboardingSlide />', () => {
  it('renders correctly', () => {
    snapshotTest(<MobileOnboardingSlide />);
  });
});

describe('<NotificationCloseButton />', () => {
  it('renders correctly', () => {
    snapshotTest(<NotificationCloseButton />);
  });
});

describe('<Show />', () => {
  it('renders correctly', () => {
    snapshotTest(<Show />);
  });
});

describe('<ListSubheader />', () => {
  it('renders correctly', () => {
    snapshotTest(<ListSubheader />);
  });
});

describe('<SliderSection />', () => {
  it('renders correctly', () => {
    snapshotTest(<SliderSection />);
  });
});

describe('<TraceResult />', () => {
  it('renders correctly', () => {
    snapshotTest(<TraceResult />);
  });
});

describe('<Truncate />', () => {
  it('renders correctly', () => {
    snapshotTest(<Truncate />);
  });
});
